# weather_app_server

./: Cargo.toml  README.md  justfile  test.sh
src/: load_env.rs  main.rs  mongo.rs  routes.rs  temp.rs
